# human-detection

./: LICENSE  README  README.md  readme.html  third-party-license-readme.txt
data/: readme.txt
models/: readme.txt
results/: readme.txt
src/: CMakeLists.txt
src/bg_sub/: BGS.h  BackgroundSubtractionAPI.h  CMakeLists.txt  CrossBilateralFilter.h  LocalBinaryPattern.cpp  LocalBinaryPattern.h  MultiLayerBGS.cpp  MultiLayerBGS.h
src/blob/: BlobExtraction.cpp  BlobExtraction.h  BlobLibraryConfiguration.h  BlobResult.cpp  BlobResult.h  CMakeLists.txt  blob.cpp  blob.h
src/cmdline/: CMakeLists.txt  Random.cc
src/common/: CMakeLists.txt  Camera.cpp  Camera.h  FileList.cpp  FileList.h  IntegralImage.cpp  IntegralImage.h  OpencvDataConversion.h  QuickSort.h  Rectangle.h  Timer.h
src/cross_bf/: CMakeLists.txt  array.h  cross_bilateral_filter.cpp
src/human_det/: BoostClassifierCovariance.cpp  BoostClassifierCovariance.h  BuildFeatureImages.cpp  BuildFeatureImages.h  CMakeLists.txt  CovarianceMatrix.cpp  CovarianceMatrix.h  ImageBoostingNegExamples.cpp  ImageBoostingNegExamples.h  ImageDetection.cpp  ImageDetection.h  IntegralRegionCov.cpp  IntegralRegionCov.h  MergingDetection.cpp  MergingDetection.h  NegExamplesGenerator.cpp  NegExamplesGenerator.h  TestWindows.cpp  TestWindows.h  WeakClassifier.cpp  WeakClassifier.h  WeakClassifierCovariance.cpp  WeakClassifierCovariance.h  sym_eig234.cpp  sym_eig234.h
src/main/: CMakeLists.txt  bgsub.cpp  bgsub_detect.cpp  bgsub_learn.cpp  human_detect.cpp  utilities.h
